--- a/math_app_for_kids/app/src/main/res/values/strings.xml
+++ b/math_app_for_kids/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Math_app_for_kids</string>
+    <string name="app_name">Math App for Kids</string>
 </resources>
